resym_core/tests/snapshots/type_reconstruction__type_reconstruction_msvc_access_specifiers-20.snap
---
source: resym_core/tests/type_reconstruction.rs
assertion_line: 103
expression: reconstructed_type
---
struct resym_test::BitFieldsTest6 { /* Size=0x2 */
  /* 0x0000 */ public: unsigned short b1 : 3; /* BitPos=0 */
  /* 0x0000 */ unsigned short : 2; /* BitPos=3 */
  /* 0x0000 */ public: unsigned short b2 : 6; /* BitPos=5 */
  /* 0x0000 */ public: unsigned short b3 : 2; /* BitPos=11 */
};
