resym_core/tests/snapshots/type_reconstruction__type_reconstruction_portable_access_specifiers-16.snap
---
source: resym_core/tests/type_reconstruction.rs
expression: reconstructed_type
---

struct resym_test::BigOffsetsStruct { /* Size=0x20000 */
  /* 0x0000 */ public: char a[65536];
  /* 0x10000 */ public: char b[65536];
};

